--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.8.6 || ^17.0.0",
     "babel-polyfill": "^6.26.0",
     "category": "^0.1.2",
+    "components": "^0.1.0",
     "controller": "^1.0.0",
     "css": "^2.2.4",
     "d3-array": "^2.12.1",
