--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/react": "^16.8.6 || ^17.0.0",
     "babel-polyfill": "^6.26.0",
+    "caniuse-lite": "^1.0.30001522",
     "category": "^0.1.2",
     "components": "^0.1.0",
     "controller": "^1.0.0",
