--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@testing-library/react": "^13.4.0",
     "@types/react": "^16.8.6 || ^17.0.0",
     "babel-polyfill": "^6.26.0",
-    "caniuse-lite": "^1.0.30001522",
     "category": "^0.1.2",
     "components": "^0.1.0",
     "controller": "^1.0.0",
@@ -79,7 +78,7 @@
     "sass": "^1.52.3"
   },
   "scripts": {
-    "start": "parcel ./src/index.html ./src/tabular-comparison.html",
+    "start": "parcel ./src/index.html",
     "cypress:gui": "cypress run --browser chrome --spec __tests__/gui/*.feature --record --key e45f872b-81b5-4f63-ad26-1dff310fb348",
     "cypress:gui-local": "cypress run --browser chrome --spec __tests__/gui/*.feature",
     "cypress": "cypress run --spec __tests__/e2e/*.feature",
