--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "chrome-remote-interface": "^0.31.0",
     "cssnano": "^4.1.10",
     "cy-verify-downloads": "^0.0.5",
-    "cypress": "^8.2.0",
+    "cypress": "^13.3.0",
     "cypress-cucumber-preprocessor": "^2.5.5",
     "html-loader-jest": "0.2.1",
     "jest": "^26.4.2",
@@ -75,7 +75,8 @@
     "parcel": "1.12.4",
     "parcel-bundler": "1.12.5",
     "react-test-renderer": "^18.2.0",
-    "sass": "^1.52.3"
+    "sass": "^1.52.3",
+    "webpack": "^5.88.2"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
