--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "Adi Eyal <adi@openup.org.za>",
   "license": "MIT",
+  "engines": {
+    "node": "16.20.2"
+  },
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
