--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "prebuild-dev": "shx rm -rf dist/*",
     "build-dev": "parcel build ./src/index.html ./src/tabular-comparison.html --no-minify --public-url ./",
     "prebuild": "shx rm -rf dist/*",
-    "build": "parcel build ./src/index.html ./src/tabular-comparison.html --public-url ./ ",
+    "build": "parcel build ./src/index.html ./src/tabular-comparison.html --no-minify --public-url ./ ",
     "clean-files": "cp dist/js*.js dist/wazimap-ng.js; cp dist/js*.js.map dist/wazimap-ng.js.map; cp dist/js*.css dist/wazimap-ng.css"
   },
   "browserslist": "> 0.25%, not dead",
