--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "jest": "^26.4.2",
     "jest-transform-stub": "2.0.0",
     "miragejs": "^0.1.41",
-    "parcel": "^2.0.0",
+    "parcel": "1.12.4",
+    "parcel-bundler": "1.12.5",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.52.3",
     "webpack": "^5.88.2"
