Change from NodeJS 18 to 20 for Vercel builds

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "CTO <cto@openup.org.za>",
   "license": "MIT",
   "engines": {
-    "node": "16.20.2"
+    "node": "20.x"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
